# minui

./: MANIFEST.in  README.md  pyproject.toml
src/minui/: cli.py  web.py
src/minui/core/: context.py  llm.py
src/minui/static/css/: style.css
src/minui/static/js/: app.js
src/minui/templates/: index.html
